# skill-scan-aaa

./: .gitignore  ASG_HANDOFF_FOR_AI.md  ASG_NEW_FEATURES.md  README.md  README_CN.md  requirements.txt  ~$G_HANDOFF_FOR_AI.md  打开网页.bat  打开网页.command
.claude/: settings.json  settings.local.json
analysis_results/sus_samples_inbox/sub-memory-bootstrap/: .env.example  LICENSE  README.md  SKILL.md  local_agent.py  pyproject.toml  requirements.txt
analysis_results/sus_samples_inbox/sub-memory-bootstrap/docs/: getting-started.md  usage-examples.md
analysis_results/sus_samples_inbox/sub-memory-bootstrap/scripts/: summarize_metrics.py
analysis_results/sus_samples_inbox/sub-memory-bootstrap/skills/sub-memory-bootstrap/: SKILL.md
analysis_results/sus_samples_inbox/sub-memory-bootstrap/skills/sub-memory-bootstrap/scripts/: bootstrap_local.sh  render_cli_snippets.py  update_shared_mcp.sh
analysis_results/sus_samples_inbox/sub-memory-bootstrap/sub_memory/: config.py  mcp_server.py  service.py  session_context.py  store.py  web.py
analysis_results/sus_samples_inbox/sub-memory-bootstrap/tests/: test_agent_compaction.py  test_configure_codex_project.py  test_ensure_repo_checkout.py  test_mcp_server.py  test_memory_store.py  test_metrics.py
asg/: README.md  __init__.py  asg_cli.py  claude_runner.py  dashboard.html  dashboard_builder.py  honeypot.py  risk_scorer.py  rules.py  static_ioc_miner.py  vm_config.example.json  vm_evidence.py  vm_ssh.py
code/: Dockerfile  agent_skill_scan.py  config.yaml
competition_materials/: DEMO_SCRIPT.md  FUTURE_WORK.md  PROJECT_INTRO.md  (+5 more)
(+1757 files in other folders)
